Insert photos and put up some designs. fixed and aligned basic structures.

--- a/style.css
+++ b/style.css
@@ -16,31 +16,90 @@ body {
   flex-direction: column;
 }
 
+.landingBg {
+  background: url("media files/bg.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100%;
+}
+
+.homeBg {
+  background: url("media files/bg11.JPG");
+  background-size: cover;
+  object-fit: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.contactBg {
+  background: url("media files/bg7.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  object-fit: cover;
+}
+
+.contactForm {
+  background-color: rgba(0, 0, 0, 0.751);
+  color: white;
+}
+
 main {
   flex: 1;
 }
 
 .navbar-logo {
-  height: 50px; /* Adjust here */
+  max-height: 80px;
   width: auto;
-  object-fit: contain;
+  object-fit: cover;
   display: block;
+}
+
+/* Desktop size */
+@media (min-width: 992px) {
+  .navbar {
+    height: 70px;
+  }
+
+  .navbar-logo {
+    max-height: 60px;
+  }
+}
+
+/* Medium screens */
+@media (max-width: 991px) and (min-width: 577px) {
+  .navbar-logo {
+    max-height: 60px;
+  }
+}
+
+/* Mobile screens */
+@media (max-width: 576px) {
+  .navbar-logo {
+    max-height: 60px;
+  }
+}
+
+.landingLogo {
+  background-color: rgba(0, 0, 0, 0.751);
 }
 
 .footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 0;
 }
 
 .bordered-box {
-  width: 50%;
+  width: 100%;
   padding: 10px;
   border-width: 1px;
   border-style: solid;
   border-color: gray;
   border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.751);
 }
 
 .field {
